--- a/index.html
+++ b/index.html
@@ -213,49 +213,6 @@
             stroke: var(--stroke);
         }
 
-        label {
-            height: 44px;
-            width: 44px;
-            position: fixed;
-            bottom: 1rem;
-            right: 1rem;
-            cursor: pointer;
-            z-index: 100; /* Ensure it's above everything */
-        }
-
-        label > svg {
-            position: absolute;
-            height: 100%;
-            width: 100%;
-            top: 0;
-            left: 0;
-            transition: transform 0.2s ease-out;
-        }
-
-        label > svg:hover {
-            transform: scale(1.1); /* Slight hover for sound icon */
-        }
-
-        label path {
-            fill: #6a1b9a; /* Purple for sound icon */
-            transition: fill 0.2s ease-in-out;
-        }
-
-        [type='checkbox'] {
-            height: 0;
-            width: 0;
-            position: absolute;
-            top: 0;
-            left: 100%;
-        }
-
-        :checked ~ label svg:nth-of-type(1) {
-            display: block;
-        }
-
-        :checked ~ label svg:nth-of-type(2) {
-            display: none;
-        }
     </style>
 </head>
 <body>
@@ -281,7 +238,7 @@
                     <rect width="63.5" height="26.458" x="55.374" y="159.984" ry="3.402"></rect>
                 </clipPath>
                 <clipPath id="frosting-clip">
-                    <path d="m 58.311339,159.19367 c -1.915439,0 -3.331523,2.04311 -3.986711,3.74446 -0.778328,2.02111 -0.761971,4.73695 0.529167,6.47582 0.861406,1.16012 2.614079,1.3182 4.033715,1.5875 1.321013,0.25059 2.689143,0 4.033714,0 1.344572,0 2.689143,0 4.033715,0 1.344572,0 2.689143,0 4.033715,0 1.344571,0 2.689143,0 4.033714,0 1.344572,0 2.689143,0 4.033715,0 1.344572,0 2.689143,0 4.033715,0 1.344572,0 2.689143,0 4.033715,0 1.344571,0 2.689143,0 4.033714,0 1.344572,0 2.689143,0 4.033715,0 1.344572,0 2.689143,0 4.033715,0 1.344573,0 2.689143,0 4.033713,0 1.34457,0 2.68915,0 4.03372,0 1.34457,0 2.68914,0 4.03371,0 1.34457,0 2.71271,0.25059 4.03372,0 1.41963,-0.2693 3.17231,-0.42738 4.03371,-1.5875 1.29114,-1.73887 1.3075,-4.45471 0.52917,-6.47582 -0.65519,-1.70135 -2.07128,-3.74446 -3.98672,-3.74446 z" style="fill:#ff0041;fill-opacity:0.53424659;fill-rule:nonzero;stroke:none;stroke-width:0.90433162;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1"></path>
+                    <path d="m 58.311339,159.19367 c -1.915439,0 -3.331523,2.04311 -3.986711,3.74446 -0.778328,2.02111 -0.761971,4.73695 0.529167,6.47582 0.861406,1.16012 2.614079,1.3182 4.033715,1.5875 1.321013,0.25059 2.689143,0 4.033714,0 1.344572,0 2.689143,0 4.033715,0 1.344572,0 2.689143,0 4.033715,0 1.344571,0 2.689143,0 4.033714,0 1.344572,0 2.689143,0 4.033715,0 1.344572,0 2.689143,0 4.033715,0 1.344572,0 2.689143,0 4.033715,0 1.344573,0 2.689143,0 4.033713,0 1.34457,0 2.68915,0 4.03372,0 1.34457,0 2.68914,0 4.03371,0 1.34457,0 2.71271,0.25059 4.03372,0 1.41963,-0.2693 3.17231,-0.42738 4.03371,-1.5875 1.29114,-1.73887 1.3075,-4.45471 0.52917,-6.47582 -0.65519,-1.70135 -2.07128,-3.74446 -3.98672,-3.74446 z" style="fill:#ff0041;fill-opacity:0.53424659;fill-rule:nonzero;stroke:none;stroke-width:0.90433162;stroke-linecap:round;stroke-linejoin:round;stroke-miterlimit:4;stroke-dasharray:none;stroke-dashoffset:0;stroke-opacity:1"></path>
                 </clipPath>
                 <g id="sprinkles" transform="translate(63.93)">
                     <rect class="cake__sprinkle" transform="rotate(-44.064)" ry=".567" y="167.592" x="-91.837" height="1.228" width="3.307"></rect>
@@ -300,8 +257,6 @@
                     <rect class="cake__sprinkle" transform="rotate(45)" ry=".567" y="95.647" x="162.293" height="1.228" width="3.307"></rect>
                     <rect class="cake__sprinkle" transform="rotate(45)" ry=".567" y="133.647" x="124.293" height="1.228" width="3.307"></rect>
                 </g>
-                <path id="frosting" d="M58.311 159.194c-1.915 0-3.283-.087-3.986 1.098-.392.661-.073 1.766.529 2.243 1.054.834 2.689 0 4.034 0H115.36c1.344 0 2.979.834 4.033 0 .602-.477.921-1.582.53-2.243-.703-1.185-2.072-1.098-3.987-1.098z"></path>
-                <path class="cake__frosting cake__frosting--end" d="M58.311 159.194c-1.915 0-3.354 2.034-3.986 3.744-.57 1.537-.953 4.189.529 4.888 1.454.687 2.425-2.645 4.034-2.645 1.608 0 2.425 2.645 4.033 2.645 1.608 0 2.426-2.645 4.034-2.645 1.608 0 2.426 2.645 4.034 2.645 1.608 0 2.425-2.645 4.033-2.645 1.608 0 2.426 2.645 4.034 2.645 1.608 0 2.426-2.645 4.034-2.645 1.608 0 2.425-2.645 4.033-2.645 1.608 0 2.436-2.83 4.034-2.645 1.936.222 2.084 4.233 4.033 4.233 1.95 0 2.098-4.01 4.034-4.233 1.598-.184 2.426 2.645 4.034 2.645 1.608 0 2.426-2.645 4.034-2.645 1.608 0 2.58 3.332 4.033 2.645 1.482-.7 1.098-3.35.53-4.888-.633-1.71-2.072-3.744-3.987-3.744z"></path>
             </defs>
             <g class="cake-decoration" transform="translate(-48.82 -138.799)">
                 <g class="cake__frosting-group" clip-path="url(#frosting-clip)">
@@ -359,16 +314,6 @@
         <span class="birthday-button__text" data-splitting="">Happy Birthday!</span>
     </button>
 </div>
-<input id="volume" type="checkbox"/>
-<label for="volume" title="Toggle sound">
-    <svg viewBox="0 0 24 24">
-        <path d="M14,3.23V5.29C16.89,6.15 19,8.83 19,12C19,15.17 16.89,17.84 14,18.7V20.77C18,19.86 21,16.28 21,12C21,7.72 18,4.14 14,3.23M16.5,12C16.5,10.23 15.5,8.71 14,7.97V16C15.5,15.29 16.5,13.76 16.5,12M3,9V15H7L12,20V4L7,9H3Z"></path>
-    </svg>
-    <svg viewBox="0 0 24 24">
-        <path d="M12,4L9.91,6.09L12,8.18M4.27,3L3,4.27L7.73,9H3V15H7L12,20V13.27L16.25,17.53C15.58,18.04 14.83,18.46 14,18.7V20.77C15.38,20.45 16.63,19.82 17.68,18.96L19.73,21L21,19.73L12,10.73M19,12C19,12.94 18.8,13.82 18.46,14.64L19.97,16.15C20.62,14.91 21,13.5 21,12C21,7.72 18,4.14 14,3.23V5.29C16.89,6.15 19,8.83 19,12M16.5,12C16.5,10.23 15.5,8.71 14,7.97V10.18L16.45,12.63C16.5,12.43 16.5,12.21 16.5,12Z"></path>
-    </svg>
-</label>
-
 <script src='https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js'></script>
 <script src='https://unpkg.com/splitting/dist/splitting.min.js'></script>
 <script src='https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/MorphSVGPlugin3.min.js'></script>
@@ -382,7 +327,7 @@
     Splitting();
 
     const BTN = document.querySelector('.birthday-button__button');
-    const BODY = document.body; // Reference to the body for background animation
+    const BODY = document.body;
 
     const SOUNDS = {
         CHEER: new Audio('https://s3-us-west-2.amazonaws.com/s.cdpn.io/605876/cheer.mp3'),
@@ -474,7 +419,7 @@
 
     const FLAME_TL = () =>
         timeline({})
-            .to('.cake__candle', { '--flame': 1, stagger: 0.1, duration: 0.1, ease: 'back.out(2)' }) /* Faster, more impactful pop */
+            .to('.cake__candle', { '--flame': 1, stagger: 0.1, duration: 0.1, ease: 'back.out(2)' })
             .to('body', { '--flame': 1, '--lightness': 5, duration: 0.2, delay: 0.2 });
 
     const LIGHTS_OUT = () =>
@@ -505,8 +450,8 @@
             '--glow-alpha': 0.6,
             '--transparency-alpha': 0,
             '--flame': 0,
-            '--primary-bg-hue': 180, /* Reset background hue */
-            '--secondary-bg-hue': 240 /* Reset background hue */
+            '--primary-bg-hue': 180,
+            '--secondary-bg-hue': 240
         });
         set('.cake__candle', { '--flame': 0 });
         to('body', {
@@ -531,15 +476,14 @@
         set('.birthday-button', { scale: 0.6, x: 0, y: 0 });
         set('.birthday-button__cake', { display: 'none' });
         set('.cake__candle', { scaleY: 0, transformOrigin: '50% 100%' });
-        document.querySelector('.birthday-button').classList.remove('active'); // Remove active class on reset
+        document.querySelector('.birthday-button').classList.remove('active');
     };
     RESET();
 
     const MASTER_TL = timeline({
         onStart: () => {
             SOUNDS.ON.play();
-            document.querySelector('.birthday-button').classList.add('active'); // Add active class to button
-            // Change background hue on start
+            document.querySelector('.birthday-button').classList.add('active');
             to(BODY, {
                 '--primary-bg-hue': 280,
                 '--secondary-bg-hue': 330,
@@ -550,21 +494,12 @@
         onComplete: () => {
             delayedCall(2, RESET);
             BTN.removeAttribute('disabled');
-            // Reset background hue
             to(BODY, {
                 '--primary-bg-hue': 180,
                 '--secondary-bg-hue': 240,
                 duration: 1,
                 ease: 'power2.inOut'
             });
-
-            // *** OPTIONAL: Add Confetti here! ***
-            // Example: If using Canvas Confetti library (need to import it)
-            // confetti({
-            //     particleCount: 100,
-            //     spread: 70,
-            //     origin: { y: 0.6 }
-            // });
         },
         paused: true
     })
@@ -598,15 +533,6 @@
         BTN.setAttribute('disabled', true);
         MASTER_TL.restart();
     });
-
-    // Mute by default
-    SOUNDS.TUNE.muted = SOUNDS.MATCH.muted = SOUNDS.HORN.muted = SOUNDS.POP.muted = SOUNDS.CHEER.muted = SOUNDS.BLOW.muted = SOUNDS.ON.muted = true;
-
-    const toggleAudio = () => {
-        SOUNDS.TUNE.muted = SOUNDS.MATCH.muted = SOUNDS.POP.muted = SOUNDS.HORN.muted = SOUNDS.CHEER.muted = SOUNDS.BLOW.muted = SOUNDS.ON.muted = !SOUNDS.BLOW.muted;
-    };
-
-    document.querySelector('#volume').addEventListener('input', toggleAudio);
 </script>
 </body>
 </html>
